Bug #4769 Subqueries with Fulltext condition don't work
Submitted: 27 Jul 2004 16:36 Modified: 19 Aug 2004 18:35
Reporter: Georg Richter Email Updates:
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1 and above OS:Any (all)
Assigned to: Sergei Golubchik Target Version:

[27 Jul 2004 16:36] Georg Richter
Description:
Using MATCH AGAINST in subquery doesn't work. 
 
Thanks to Björn Möller, which reported this bug on german newsgroup. 

How to repeat:
Tables and Data: 
 
create table t1 (a int not null auto_increment primary key, b varchar(40), fulltext(b)); 
Query OK, 0 rows affected (0.08 sec) 
 
insert into t1 (b) values ('ball'),('ball games'), ('games'), ('foo'), ('foobar'), ('Serg'), ('Sergei'),('Georg'),
('Patrik'),('Hakan'); 
 
create table t2 (a int); 
 
insert into t2 values (1),(3),(2),(7); 
 
select a,b from t1 where match(b) against ('Ball') > 0; 
+---+------------+ 
| a | b          | 
+---+------------+ 
| 1 | ball       | 
| 2 | ball games | 
+---+------------+ 
2 rows in set (0.08 sec) 
 
select a from t2 where a in (select a from t1 where match(b) against ('Ball') > 0); 
Empty set (0.04 sec)
[13 Aug 2004 15:45] Sinisa Milivojevic
Patch pending for approval.
[19 Aug 2004 18:35] Sergei Golubchik
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

fixed in 4.1.4