Bug #4769 - ft in subqueries